# src/controllers/taskController.js
@@ -1,7 +1,9 @@
 import * as taskService from '../services/taskService.js';
 
 export async function getTasks(req, res, next) {
-  const tasks = await taskService.getAllTasks();
+const { completed } = req.query;
+
+  const tasks = await taskService.getAllTasks(completed);
   res.json(tasks);
 }
 
